--- a/src/index.css
+++ b/src/index.css
@@ -40,15 +40,15 @@ position: relative;
 }
 
 
-.collection{
+/* .collection{
 
-}
+} */
 .collection-menu{
   position: absolute;
   display: flex;
   background-color: rgb(24, 24, 24);
-  border: 1px solid white;
-  margin-top: 60px;
+  border-top: 1px solid white;
+  margin-top: 59px;
   justify-content: center;
   align-items: center;
   width: 300%;
@@ -75,9 +75,25 @@ position: relative;
   width: 250px;
 }
 .product-design{
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  height: 500px;
+  padding: 10px;
+  cursor: pointer;
+  transition: transform .7s ease-in-out;
+  text-align: center;
 }
 
+.product-design:hover{
+  transform: scale(1.05);
+}
+.product-info{
+  margin-top: 20px;
+  line-height: 1.3;
+}
 
 .footer{
   background-color: rgb(20, 20, 20);
