--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 * {
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
 }
 
 .heading {
@@ -9,9 +8,12 @@
   justify-content: space-between;
   display: flex;
   align-items: center;
-  height: 60px;
+  height: 80px;
   border-bottom: 1px solid white;
-  padding: 10px;
+  box-sizing: border-box;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
 }
 .logo-container {
   display: flex;
@@ -41,21 +43,34 @@
 /* .collection{
 
 } */
-.collection-menu {
-  position: absolute;
+.filter-btns {
+  /* position: absolute; */
   display: flex;
-  background-color: rgb(24, 24, 24);
-  border-top: 1px solid white;
-  margin-top: 59px;
+  color: white;
+  margin-top: 50px;
   justify-content: center;
   align-items: center;
-  width: 300%;
-  margin-left: 0px;
-  height: 60px;
-  z-index: 10;
+  width: 100%;
+  padding: 5px;
+  /* margin-top: 31px; */
+  box-sizing: border-box;
 }
-.collection-menu li {
-  margin-right: 65px;
+.filter-btns button {
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 1rem;
+  margin: 5px;
+  border: 1px solid rgb(47, 47, 47);
+}
+
+.filter-btns button.active {
+  background-color: #080707; /* Highlight color */
+  color: white;
+}
+
+.filter-btns button.inactive {
+  background-color: #f4f4f4; /* Default background color */
+  color: black;
 }
 
 .cart-link li {
@@ -82,11 +97,14 @@
   display: flex;
   justify-content: center;
   margin-top: 20px;
+  z-index: 1;
+  margin-top: 100px;
 }
 
 .banners {
   width: 90%;
   height: 450px;
+  z-index: 1;
 }
 
 .title-box {
@@ -260,18 +278,19 @@ aside .info {
   width: 100%;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
+  margin-top: 40px;
 }
 
 .cart-item {
   display: grid;
-  border-bottom: 1px solid black;
+  border-bottom: 2px solid black;
   margin-top: 40px;
 }
 .cart-item-info {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border-top: 1px solid black;
+  border-top: 2px solid black;
   height: 150px;
   align-items: center;
   width: 100%;
@@ -357,24 +376,26 @@ aside .info {
 
 .checkout-modal {
   position: absolute;
-  background-color: rgba(11, 11, 11, 0.98);
-  top: 80px;
+  background-color: rgba(11, 11, 11, 1);
+  top: 570px;
   bottom: 0;
   right: 0;
   left: 0;
   color: white;
   z-index: 100;
   margin: auto;
+  font-family: Arial, Helvetica, sans-serif;
+  min-height: 150vh;
 }
 .checkout-title {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 
 .checkout-summary {
   display: flex;
   width: 100%;
-  background-color: brown;
+
   padding: 20px;
   justify-content: space-between;
   min-height: 100vh;
@@ -382,17 +403,16 @@ aside .info {
 
 .review-order {
   width: 55%;
-  background-color: pink;
+
   height: 100vh;
 }
 .review-order-div {
   display: flex;
   flex-direction: row;
-  height: 120px;
+  height: 150px;
   border: 2px solid rgb(249, 247, 247);
 }
 .review-product {
-  background-color: blue;
   display: flex;
   font-size: 1.2rem;
   width: 100%;
@@ -403,13 +423,12 @@ aside .info {
   width: 90px;
 }
 .review-product-aside {
-  background-color: rgb(120, 210, 30);
   width: 60%;
   font-size: 1.3rem;
   text-align: right;
+  line-height: 1.5;
 }
 .edit-btns {
-  background-color: yellow;
   margin-top: 5px;
 }
 .edit-btns button {
@@ -423,9 +442,10 @@ aside .info {
 }
 .order-summary {
   width: 33%;
-  background-color: green;
+
+  border: 2px solid white;
   height: fit-content;
-  font-family: Arial, Helvetica, sans-serif;
+
   margin-right: 40px;
   padding: 10px;
 }
@@ -507,4 +527,6 @@ aside .info {
   align-items: center;
   color: white;
   height: 60px;
+  bottom: 0;
+  width: 100%;
 }
