--- a/src/index.css
+++ b/src/index.css
@@ -192,8 +192,8 @@
   height: 80vh;
   display: flex;
   flex-direction: row;
-  margin: 30px;
-  padding: 30px;
+  margin: 10px;
+  padding: 15px;
   font-size: 1.2rem;
   font-family: "Times New Roman", Times, serif;
 }
@@ -219,6 +219,7 @@ aside {
 aside .info {
   line-height: 1.2;
 }
+
 .add-to-cart-btn {
   margin-top: 40px;
   width: 80%;
@@ -228,23 +229,40 @@ aside .info {
   border: 2px solid black;
   background-color: white;
   cursor: pointer;
-}
-.add-to-cart-btn:active {
-  background-color: black;
-  border-color: white;
-  color: white;
+  transition: all 0.3s ease;
 }
 
-.positive {
+/* .add-to-cart-btn.active {
+  background-color: black;
+  color: white;
+  transform: scale(0.95);
+} */
+.add-to-cart-btn.added {
+  background-color: black;
+  color: white;
+  transform: scale(0.95);
+}
+
+.add-to-cart-btn:active {
+  transform: scale(0.98);
+}
+
+.add-to-cart-btn:disabled {
+  cursor: not-allowed; /* Make cursor look like it's disabled */
+  background-color: #c6e1c6;
+}
+
+/* .positive {
   background-color: black;
   border-color: white;
   color: white;
-}
+} */
 
 .empty-cart {
   min-height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 40px;
 }
 .empty-cart-msg {
@@ -364,7 +382,8 @@ aside .info {
   font-size: 1.3rem;
 }
 
-.checkout-btns button {
+.proceed-to-checkout-btn,
+.continue-shopping-btn {
   padding: 10px;
   font-size: 1.1rem;
   font-family: Arial, Helvetica, sans-serif;
@@ -375,9 +394,9 @@ aside .info {
 }
 
 .checkout-modal {
-  position: absolute;
+  position: fixed;
   background-color: rgba(11, 11, 11, 1);
-  top: 570px;
+  top: 150px;
   bottom: 0;
   right: 0;
   left: 0;
@@ -385,17 +404,19 @@ aside .info {
   z-index: 100;
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
-  min-height: 150vh;
+  min-height: 100vh;
 }
-.checkout-title {
+.checkout-modal-title {
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 2rem;
+  margin: 20px;
 }
 
 .checkout-summary {
   display: flex;
   width: 100%;
-
+  position: relative;
+  overflow-y: auto;
   padding: 20px;
   justify-content: space-between;
   min-height: 100vh;
@@ -403,14 +424,19 @@ aside .info {
 
 .review-order {
   width: 55%;
-
-  height: 100vh;
+  border: 2px solid red;
+  max-height: 500px;
+  min-height: 150px;
+  overflow-y: auto;
 }
 .review-order-div {
   display: flex;
   flex-direction: row;
   height: 150px;
-  border: 2px solid rgb(249, 247, 247);
+}
+
+.review-order-div:not(:last-child) {
+  border-bottom: 2px solid rgb(249, 247, 247);
 }
 .review-product {
   display: flex;
@@ -431,7 +457,8 @@ aside .info {
 .edit-btns {
   margin-top: 5px;
 }
-.edit-btns button {
+.update-item-btn,
+.remove-item-btn {
   cursor: pointer;
   padding: 5px;
   font-size: 1.1rem;
