--- a/src/index.css
+++ b/src/index.css
@@ -419,7 +419,7 @@ aside .info {
   overflow-y: auto;
   padding: 20px;
   justify-content: space-between;
-  min-height: 100vh;
+  min-height: 65vh;
 }
 
 .review-order {
@@ -433,11 +433,12 @@ aside .info {
   display: flex;
   flex-direction: row;
   height: 150px;
-}
-
-.review-order-div:not(:last-child) {
   border-bottom: 2px solid rgb(249, 247, 247);
 }
+
+/* .review-order-div:not(:last-child) {
+  border-bottom: 2px solid rgb(249, 247, 247);
+} */
 .review-product {
   display: flex;
   font-size: 1.2rem;
@@ -506,6 +507,18 @@ aside .info {
   width: 300px;
 }
 
+.close-checkout-btn-box {
+  height: fit-content;
+  text-align: center;
+}
+.close-checkout-btn-box button {
+  padding: 20px;
+  width: 350px;
+  font-size: 1.3rem;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .order-page {
   min-height: 100vh;
   padding: 30px;
@@ -515,6 +528,7 @@ aside .info {
   border-radius: 20px;
   padding: 5px;
   font-family: Arial, Helvetica, sans-serif;
+  margin-top: 40px;
 }
 .order-details-header {
   display: flex;
@@ -556,4 +570,5 @@ aside .info {
   height: 60px;
   bottom: 0;
   width: 100%;
+  z-index: 100;
 }
