--- a/src/index.css
+++ b/src/index.css
@@ -55,17 +55,17 @@ html {
   align-items: center;
   width: 100%;
   padding: 5px;
-
   box-sizing: border-box;
 }
 .filter-btns button {
   padding: 10px 20px;
   cursor: pointer;
   font-size: 1rem;
-  height: 2em;
+  height: 2.3em;
   width: fit-content;
   margin: 0.3em;
   border: 1px solid rgb(47, 47, 47);
+  text-align: center;
 }
 
 .filter-btns button.active {
@@ -652,11 +652,14 @@ aside .info {
 
   .products-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    /* gap: 20px;
-    padding: 40px;
+    grid-template-columns: 1fr;
+    gap: 30px;
+    /* padding: 40px;
     align-items: center;
     justify-content: center; */
+  }
+
+  .filter-btns {
   }
 }
 
