--- a/src/index.css
+++ b/src/index.css
@@ -306,16 +306,27 @@ Apply the animation to the button */
   margin: 10px;
   display: flex;
   align-items: center;
+  color: black;
 }
 
 .added-msg {
-  background-color: lightgreen;
+  background-color: #4caf50;
   width: 100%;
-  position: absolute;
-  height: fit-content;
+  position: fixed;
+  top: 0px;
+  left: 0;
+  height: 60px;
   text-align: center;
+  display: flex;
+  align-items: center;
+  color: black;
   text-transform: uppercase;
   font-weight: bold;
+  transition: top 0.5s ease-in-out;
+}
+
+.added-msg.active {
+  top: 80px;
 }
 
 .preview {
@@ -372,6 +383,7 @@ aside .info {
   font-size: 1.3rem;
   font-weight: bold;
   border: 2px solid black;
+  color: black;
   background-color: white;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -413,13 +425,16 @@ aside .info {
 .empty-cart-msg {
   text-align: center;
   line-height: 1;
+  font-size: 1.8rem;
+  width: 900px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .empty-cart-msg button {
-  padding: 20px;
+  padding: 15px;
+  width: 300px;
   background-color: black;
   font-weight: bold;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   border-radius: 30px;
   cursor: pointer;
   color: white;
@@ -572,7 +587,7 @@ aside .info {
 
 .review-order {
   width: 55%;
-  border: 2px solid red;
+  border: 2px solid white;
   max-height: 500px;
   min-height: 150px;
   overflow-y: auto;
@@ -619,7 +634,7 @@ aside .info {
 .order-summary {
   width: 33%;
 
-  border: 2px solid red;
+  border: 2px solid white;
   height: fit-content;
 
   margin-right: 40px;
@@ -935,7 +950,7 @@ aside .info {
 
   .review-order {
     width: 95%;
-    border: 2px solid red;
+
     max-height: 300px;
     min-height: 150px;
     overflow-y: auto;
@@ -1132,7 +1147,7 @@ aside .info {
 
   .review-order {
     width: 95%;
-    border: 2px solid red;
+
     max-height: 300px;
     min-height: 150px;
     overflow-y: auto;
@@ -1380,7 +1395,7 @@ aside .info {
 
   .total {
     /* background-color: pink; */
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   .subtotal,
@@ -1425,7 +1440,7 @@ aside .info {
 
   .review-order {
     width: 96%;
-    border: 2px solid red;
+
     max-height: 280px;
     min-height: 150px;
     overflow-y: auto;
