--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,155 @@ html {
   flex-direction: column;
 } */
 
+/* General reset and box-sizing */
+
+.welcome-page {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-image: url("https://img.freepik.com/free-photo/arrangement-black-friday-shopping-carts-with-copy-space_23-2148667047.jpg?t=st=1745430341~exp=1745433941~hmac=79465bc7443c59d22b0395b886fe84570bb2698515c77a7aab0f30fa46a68cf1&w=1380");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+/* Form container */
+.signup-form-container,
+.login-form-container {
+  background-color: #1e1e1e;
+  padding: 2rem;
+  width: 100%;
+  max-width: 600px;
+  border-radius: 12px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+}
+
+/* Headings */
+.signup-form-container h3,
+.login-form-container h3 {
+  margin-bottom: 1rem;
+  text-align: center;
+  color: #ffffff;
+}
+
+/* Form fields */
+.signup-field-label,
+.login-field label {
+  display: block;
+  margin-bottom: 0.5rem;
+  color: #cccccc;
+  font-weight: 500;
+}
+
+.signup-field {
+  margin-bottom: 0.7rem;
+}
+
+.signup-field-input,
+.login-field input {
+  width: 94%;
+  padding: 0.7rem;
+  margin-bottom: 5px;
+  border: 1px solid #444;
+  border-radius: 8px;
+  color: #f1f1f1;
+  background-color: #2c2c2c;
+  transition: border 0.3s ease;
+}
+
+.signup-field-input-error {
+  border: 1px solid red;
+}
+
+.signup-field-input:focus,
+.login-field input:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+/* Button */
+.signup-form-container button,
+.login-form-container button {
+  width: 100%;
+  padding: 0.75rem;
+  margin: 20px 0px;
+  background-color: #007bff;
+  border: none;
+  color: #fff;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.signup-form-container button:hover,
+.login-form-container button:hover {
+  background-color: #0056b3;
+}
+
+.signup-form-container button:active,
+.login-form-container button:active {
+  background-color: #ccc;
+  color: black;
+}
+
+/* Error messages */
+.signup-form-container p {
+  font-size: 1rem;
+  font-weight: bold;
+  color: red;
+  margin-top: -0.5rem;
+  margin-bottom: 1rem;
+}
+
+fieldset {
+  border: 2px solid #333;
+  border-radius: 10px;
+  padding: 0.5rem;
+  margin-top: 1.2rem;
+  background-color: #1a1a1a;
+}
+
+legend {
+  padding: 0 0.5rem;
+  font-weight: bold;
+  font-size: 1.1rem;
+  color: #eee;
+}
+
+.radio-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.55rem;
+  margin-top: 1rem;
+
+  text-align: left;
+  width: 100%;
+}
+
+.radio-option {
+  display: flex;
+  align-items: center;
+
+  gap: 0.5rem;
+  cursor: pointer;
+  transition: color 0.2s ease;
+}
+
+.radio-option input[type="radio"] {
+  accent-color: #007bff; /* modern browser support */
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.radio-option label {
+  font-size: 1rem;
+  color: #ccc;
+  cursor: pointer;
+}
+
 .not-found-page {
   display: flex;
   justify-content: center;
@@ -309,7 +458,8 @@ Apply the animation to the button */
   color: black;
 }
 
-.added-msg {
+.added-msg,
+.uploaded-msg {
   background-color: #4caf50;
   width: 100%;
   position: fixed;
@@ -326,7 +476,8 @@ Apply the animation to the button */
   transition: top 0.5s ease-in-out;
 }
 
-.added-msg.active {
+.added-msg.active,
+.uploaded-msg.active {
   top: 80px;
 }
 
@@ -349,6 +500,24 @@ Apply the animation to the button */
 .preview-img {
   width: 70%;
 }
+.spinner {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 aside {
   width: 60%;
   color: black;
